Fixed the gap between social icons and the resume button on mobile

--- a/assets/css/queries.css
+++ b/assets/css/queries.css
@@ -89,6 +89,7 @@ instead, 1rem = 1em = 16px */
 
   .header-links {
     flex-direction: column;
+    gap: 1.2rem;
   }
 
   .intro-image {
